Use builtin immutable maps/sets/lists when available (#2023)
Utilize some Java 11 features for immutable maps, sets, and lists, to
minimize our dependence on equivalent Guava features. Some use of Guava
builders for these are still used, since Java 11 doesn't have convenient
immutable collection builders, but they have been made final to ensure
we use them correctly and don't re-assign them once built.